force-app/main/default/objects/Spread_Path__mdt/Spread_Path__mdt.object-meta.xml
<CustomObject>
    <description>Packageable valid spreading comparison path definitions.</description>
    <label>Spread Path</label>
    <pluralLabel>Spread Paths</pluralLabel>
</CustomObject>