force-app/main/default/objects/Spread_Path__mdt/fields/Is_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Is_Baseline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Baseline</label>
    <type>Checkbox</type>
</CustomField>