force-app/main/default/objects/Spread_Path__mdt/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <label>Provider Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>