force-app/main/default/objects/Spread_Path__mdt/fields/Requires_Time_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Requires_Time_Reduction__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Requires Time Reduction</label>
    <type>Checkbox</type>
</CustomField>